# ChangeLog for app-vim/supertab
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-vim/supertab/ChangeLog,v 1.33 2011/03/10 04:28:55 radhermit Exp $

*supertab-1.5 (10 Mar 2011)

  10 Mar 2011; Tim Harder <radhermit@gentoo.org> +supertab-1.5.ebuild:
  Version bump.

  07 Jan 2011; Tim Harder <radhermit@gentoo.org> -supertab-0.32.ebuild,
  -supertab-0.45.ebuild, -supertab-1.0.ebuild:
  Remove old

  07 Jan 2011; Brent Baude <ranger@gentoo.org> supertab-1.1.ebuild:
  stable ppc, bug 345065

  14 Nov 2010; Raúl Porcel <armin76@gentoo.org> supertab-1.1.ebuild:
  alpha/ia64/sparc stable

  14 Nov 2010; Markus Meier <maekke@gentoo.org> supertab-1.1.ebuild:
  x86 stable, bug #345065

  11 Nov 2010; Markos Chandras <hwoarang@gentoo.org> supertab-1.1.ebuild:
  Stable on amd64 wrt bug #345065

  07 Oct 2010; Mart Raudsepp <leio@gentoo.org> supertab-0.32.ebuild:
  Drop to ~mips

*supertab-1.1 (03 Oct 2010)

  03 Oct 2010; Tim Harder <radhermit@gentoo.org> +supertab-1.1.ebuild:
  Version bump.

  14 May 2010; Markos Chandras <hwoarang@gentoo.org> supertab-0.45.ebuild:
  Stable on amd64 wrt bug #246798

  16 Apr 2010; Brent Baude <ranger@gentoo.org> supertab-0.45.ebuild:
  Marking supertab-0.45 ppc for bug 246798

  04 Apr 2010; Raúl Porcel <armin76@gentoo.org> supertab-0.45.ebuild:
  alpha/ia64/sparc/x86 stable wrt #246798

*supertab-1.0 (29 Mar 2010)

  29 Mar 2010; Jim Ramsay <lack@gentoo.org> +supertab-1.0.ebuild:
  Version bump: Supertab-1.0

*supertab-0.45 (20 Sep 2008)

  20 Sep 2008; Ali Polatel <hawking@gentoo.org> -supertab-0.31.ebuild,
  -supertab-0.41.ebuild, +supertab-0.45.ebuild:
  Version bump. Drop old.

  09 May 2007; Mike Kelly <pioto@gentoo.org> supertab-0.41.ebuild:
  Update HOMEPAGE, see Bug #173083.

  11 Jan 2007; Mike Kelly <pioto@gentoo.org> supertab-0.41.ebuild:
  Remove block against vim7.

*supertab-0.41 (11 Jan 2007)

  11 Jan 2007; Mike Kelly <pioto@gentoo.org> +supertab-0.41.ebuild: