@@ -1,20 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA512
 
 DIST supertab-1.1.tar.bz2 10100 RMD160 cd45d349f0a6959e0103f968b6079fd2a6ce9a7b SHA1 bd74855f8d5a38d2985cef8747d3ab1ca815dce6 SHA256 4a6939350886a2b4da070607bca2383513e6ad5f8447eb3bf79b2ec9068334fc
 DIST supertab-1.5.tar.bz2 10338 RMD160 bee711b7e2d90fe2ac2c40b8add76547a9b5be89 SHA1 a9a96bc6011ca2d519ec3cefd99ae7e0575f362e SHA256 2c84df9ae0d5431af6975a45e07d57c814da552dc03297bb830a9bc6168f3019
+DIST supertab-1.6.tar.gz 11890 RMD160 cb1241231d5a9cc0149c67d4a128a57ccb6edaa8 SHA1 c5bfa038e81b1869da1a2c2161b2cef9a7a178d5 SHA256 0fc29fe699459a12b3480470f3e66f0259c01f7db4ec338c094f244873f8441a
 EBUILD supertab-1.1.ebuild 473 RMD160 7fee5854caa7fd24393617a5fa8f522766f50f07 SHA1 2287e61beb641dab1c4f131e2e64a38d6cb8b7f7 SHA256 5819a19ec4ebc2ae8b57ef9d9c6f935899e6e20e6269fe9b7f14c678f1fa2daf
 EBUILD supertab-1.5.ebuild 482 RMD160 a440ec2e437f3a392051825f05c2dbe9fbc66c86 SHA1 5408b2dfde2d87efef70b60432fa720c1f1de2c2 SHA256 66c9c8cf56af7d063ff4e752ec13b33048b5710266f575fccce8b407b109b4cd
-MISC ChangeLog 3483 RMD160 5910d0dcebd69daf47ec47072e38613369836233 SHA1 63c4c9c71d579f6cb6233ff8d54e781424bdfc25 SHA256 b281687bf3b3d593476230c413f6b1c3fcfa3098b1c1bb641775a1c0fb9a30d9
+EBUILD supertab-1.6.ebuild 681 RMD160 b8982b3e5f902042313e597ea460e7614ccee3d0 SHA1 7d969d91db1e153d23f5f69808363615e1d3464b SHA256 bb670994290901c84a070644090c71d6a4c7e149db8bfed65afb4e0648289513
+MISC ChangeLog 3619 RMD160 0e41db3868aa2a93c57adfb587ba7c3bd2cb7bde SHA1 c7c8c253b85acdac5aa32d3298417d7c4916726b SHA256 6f30430cc70f21181202ce5e216db9a9e08b2336b335e5c99b0210e765cd27b7
 MISC metadata.xml 157 RMD160 adcd6494e1e562ab5e0bd090e114622782ac753a SHA1 22983b8e9ba3045d8ccbc2b14393423f7f05d2ee SHA256 106c8618581360c66c2b535fcb7a6cb9ff318f1bd8e6c8f40f2f2f2d54e6787a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQEcBAEBAgAGBQJNeFOPAAoJEEqz6FtPBkyjuBoH/ibzXk7ezYqjh0As25aklG3G
-m42Ykg3SyWQdqIATX3KgRTbbYlO9ZMfXDfvFvRZ3q61OYpYpICIFb5yMJ5qj8IoH
-XgL/QaJw++7mZi/2SGnbzEuFS6babCmN1aje7gfYsPUFCY+7RhFPW7gHgzdE3FAL
-9uKfsetWXZBRqTZkqLJdZZ4V0q4oWYdWUCVCMvKXUWpKzwFbv2LwckN2axwJpML+
-CFpuYoiSBA0hGaXWiZ2nI12eZd74mTUGEtkU8o2MYFApEg3XLQMZocpuwoCyEJto
-RtItgfrPbJFB2Yjl8zks52TZuXeZnN+mdIfs6P+9hz2/stl8FW1hPYSDT4Txaz4=
-=R2Ib
+iQEcBAEBCgAGBQJOJ3UlAAoJEEqz6FtPBkyjGhIH/2mZrwjroDPaFtHA6UqvsswP
+ePRjCKpDgK/Q34aa1C4OvyI4FY6d6kcDvtGMAgzy3Q5NjGvuZCqhvndytdlxZV5U
++BLay4tk5FhGTdHWNEnoxC723g5PNUT1k5tnE1DcRNlgUMigMimtRUeL2nMLW3Rr
+btiMUj/Cchnd4OLlLBOmofmTnYOuh3ciG66SRbUmZZyVaC8s/0yTKeDLU1PoQ/5U
+qsWhhV3KJWKz0G0fPHwSnRVfLtPG4cUn8Taap6qX19oPGq0jILxyHIeXVKhPkzu7
+qwJq/lgZANns9+yjf60FtEqUGDyVX/RCmZYvWSn8P1FU6HBX5vqbZzh4LcakvT4=
+=jyvU
 -----END PGP SIGNATURE-----
