@@ -1,0 +1,26 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-vim/supertab/supertab-1.6.ebuild,v 1.1 2011/07/21 00:38:56 radhermit Exp $
+
+EAPI="4"
+inherit vim-plugin
+
+MY_PN="SuperTab-continued."
+DESCRIPTION="vim plugin: enhanced Tab key functionality"
+HOMEPAGE="http://www.vim.org/scripts/script.php?script_id=1643"
+SRC_URI="https://github.com/vim-scripts/${MY_PN}/tarball/${PV} -> ${P}.tar.gz"
+
+LICENSE="vim"
+KEYWORDS="~alpha ~amd64 ~ia64 ~mips ~ppc ~sparc ~x86"
+IUSE=""
+
+VIM_PLUGIN_HELPFILES="supertab"
+
+src_unpack() {
+	unpack ${A}
+	mv *-${MY_PN}-* "${S}"
+}
+
+src_prepare() {
+	rm README || die
+}
