@@ -1,6 +1,11 @@
 # ChangeLog for app-vim/supertab
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/supertab/ChangeLog,v 1.33 2011/03/10 04:28:55 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-vim/supertab/ChangeLog,v 1.34 2011/07/21 00:38:55 radhermit Exp $
+
+*supertab-1.6 (21 Jul 2011)
+
+  21 Jul 2011; Tim Harder <radhermit@gentoo.org> +supertab-1.6.ebuild:
+  Version bump. Use github mirror.
 
 *supertab-1.5 (10 Mar 2011)
 
